// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows attaching file 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`exceed file size 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="containerError Alert-cAvYle index__c-callout--error___E8TxN yXqxN Well-clhnSB index__c-callout___cUpq9 jvFzku"
          data-garden-id="notifications.alert"
          data-garden-version="3.1.13"
          role="alert"
          type="error"
        >
          <div
            class="previewError Title-kAzUgf index__c-callout__title___264nL clPTca"
            data-garden-id="notifications.title"
            data-garden-version="3.1.13"
          >
            some.csv
          </div>
          <div
            class="secondaryTextError"
          >
            The file is too big. Please attach files that are less than 5 MB.
          </div>
          <button
            class="Close-bksCXL index__c-callout__close___2yt98 ZEnsu"
            data-garden-id="notifications.close"
            data-garden-version="3.1.13"
            type="button"
          />
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`exceed maximum number of files 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                1.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-2"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                2.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-3"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                3.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-4"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                4.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-5"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                5.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        class="error"
      >
        You have already reached the limit of (5) attachments
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`failed upload 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="containerError Alert-cAvYle index__c-callout--error___E8TxN yXqxN Well-clhnSB index__c-callout___cUpq9 jvFzku"
          data-garden-id="notifications.alert"
          data-garden-version="3.1.13"
          role="alert"
          type="error"
        >
          <div
            class="previewError Title-kAzUgf index__c-callout__title___264nL clPTca"
            data-garden-id="notifications.title"
            data-garden-version="3.1.13"
          >
            some.csv
          </div>
          <div
            class="secondaryTextError"
          >
            There was a problem attaching this file. Please try again.
          </div>
          <button
            class="Close-bksCXL index__c-callout__close___2yt98 ZEnsu"
            data-garden-id="notifications.close"
            data-garden-version="3.1.13"
            type="button"
          />
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`picks the correct icon types 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-pdf"
              type="Icon--preview-pdf"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.pdf
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-2"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-zip"
              type="Icon--preview-zip"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.rar
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-3"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.ppt
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-4"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-zip"
              type="Icon--preview-zip"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.zip
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-5"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.doc
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-6"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.docx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-7"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.pptx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-8"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.key
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-9"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.xls
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-10"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.xlsx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-11"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.numbers
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-12"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.blah.txt
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-13"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.rtf
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-14"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.pag
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-15"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              type="Icon--preview-document"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.pages
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-16"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              type="Icon--preview-image"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.png
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-17"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              type="Icon--preview-image"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.jpg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-18"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              type="Icon--preview-image"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.jpeg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-19"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              type="Icon--preview-image"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.gif
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-20"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              type="Icon--preview-default"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.svg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-21"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              type="Icon--preview-default"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.mp4
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-22"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              type="Icon--preview-default"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.random
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`remove attachment 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with mobile styles 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add file from device
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`successful upload 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments (1)
      </label>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                1 KB
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`uploading in progress upload 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          ui-test-id="attachmentContainer-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              test-file-stub
            </span>
            <div
              class="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              type="Icon--close"
            >
              test-file-stub
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              style="width: 55%;"
            />
          </div>
        </div>
      </div>
      <div
        class="dropzone "
        data-testid="dropzone"
      >
        <div
          class="dropzoneChild"
        >
          <span
            class="container icon Icon--paperclip-small"
            type="Icon--paperclip-small"
          >
            test-file-stub
          </span>
          <div
            class="dropzoneChildLabel"
          >
            Add up to 5 files
          </div>
        </div>
        <input
          id="dropzone-input"
          multiple=""
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;
